# codefest_heartlyzer

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/codefest_heartlyzer_backend/: Cargo.toml
src/codefest_heartlyzer_backend/src/: dataset.json  lib.rs  types.rs
src/codefest_heartlyzer_backend/src/models/: ml.rs
src/codefest_heartlyzer_backend/src/services/: health.rs
src/codefest_heartlyzer_backend/src/utils/: preprocess.rs
src/codefest_heartlyzer_frontend/: index.html  package.json
src/codefest_heartlyzer_frontend/src/: App copy 2.jsx  App copy.jsx  App.jsx  main.jsx
src/codefest_heartlyzer_frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  LoginBanner.jsx  Navbar.jsx  Sidebar.jsx
src/codefest_heartlyzer_frontend/src/data/: questions.js
src/codefest_heartlyzer_frontend/src/utils/: auth.js  chat.js
src/declarations/codefest_heartlyzer_backend/: codefest_heartlyzer_backend.did  codefest_heartlyzer_backend.did.d.ts  codefest_heartlyzer_backend.did.js  index.d.ts  index.js
src/declarations/codefest_heartlyzer_frontend/: index.d.ts  index.js
