[package]
name = "codefest_heartlyzer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
chrono = "0.4.40"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = "0.4.0"
wasm-bindgen = "0.2.92"
ic-stable-structures = "0.5.4"
